<resources>
    <string name="app_name">PreUpMoney</string>
    <string name="hi_username">Hi, Username!</string>
    <string name="forgot">Забыли пароль?</string>
    <string name="bank">Счет</string>
    <string name="payment">Платежи</string>
    <string name="service">Сервис</string>
    <string name="investment">Вклады</string>
    <string name="contact">Контакт</string>
    <string name="chat">Чат</string>
    <string name="search">Что ищем сегодня?</string>
    <string name="search_layout">Поиск</string>
    <string name="search_in_progress">Ищем...</string>
    <string name="edit">Редактирование</string>
    <string name="add">Открыть новый продукт</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="sing_in">Войти</string>
    <string name="register">Нет аккаунта?</string>
    <string name="welcome">Привет!\nРады тебя видеть</string>
    <string name="none_found">Похоже наши фиксики ничего не нашли...</string>
    <string name="phone">Номер телефона: </string>
    <string name="pass">Пароль: </string>
    <string name="pass_confirm">Повторение пароля: </string>
    <string name="confirm_register">Зарегистрироваться</string>
    <string name="go_back_str">Назад</string>
    <string name="save_profile">Сохранить профиль</string>
    <string name="name_profile">ФИО: </string>
    <string name="gender_profile">Пол: </string>
    <string name="pasport_profile">Паспорт: </string>
    <string name="address_profile">Адрес: </string>
    <string name="choose_tariff">Выберите тариф: </string>
    <string name="save_edit">Сохранить</string>
    <string name="importing">Импортировать контакты</string>
    <string name="transaction">Перевести</string>
    <string name="choose_bank">Выберите счет: </string>
    <string name="left_balance">Остаток счета: </string>
    <string name="sum">Сумма: </string>
</resources>