<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >
        <ImageButton
            android:id="@+id/user"
            android:background="@color/blue_sky"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintHorizontal_bias="0.95"
            app:srcCompat="@drawable/user_circle_small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textColor="@color/main_light_font_and_elem"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintHorizontal_bias="0.5"
            />
        <ImageButton
            android:id="@+id/settings"
            android:background="@color/blue_sky"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintHorizontal_bias="0.05"
            app:srcCompat="@drawable/settings"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_constraintVertical_bias="0.5"
        android:layout_margin="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/search_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintHorizontal_bias="0.02"
                app:srcCompat="@drawable/search"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/main_light_font_and_elem"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintHorizontal_bias="0.13"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:fillViewport="true"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/csl"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/import_btn"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/search_bar"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/importing"
                        android:textAlignment="center"
                        android:textColor="@color/main_light_font_and_elem"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        >
        <Button
            android:id="@+id/bank_account"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            android:textColor="@color/main_light_font_and_elem"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:backgroundTint="@color/blue_sky"
            android:drawableTop = "@drawable/bank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745"
            app:layout_constraintHorizontal_bias="0.05"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/payment"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_sky"
            android:drawableTop="@drawable/bank_note_dragged"
            android:text="@string/payment"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="10.5sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745"

            />
        <Button
            android:id="@+id/service"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/service"
            android:textColor="@color/main_light_font_and_elem"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:backgroundTint="@color/blue_sky"
            android:drawableTop="@drawable/shopping_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745"
            app:layout_constraintHorizontal_bias="0.5"
            style="?android:attr/borderlessButtonStyle"
            />
        <Button
            android:id="@+id/investment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/investment"
            android:textColor="@color/main_light_font_and_elem"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_sky"
            android:textAlignment="center"
            android:textStyle="bold"
            android:drawableTop="@drawable/coins_stacked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745"
            app:layout_constraintHorizontal_bias="0.76"
            style="?android:attr/borderlessButtonStyle"
            />
        <Button
            android:id="@+id/chat"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:textColor="@color/main_light_font_and_elem"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_sky"
            android:textAlignment="center"
            android:textStyle="bold"
            android:drawableTop="@drawable/message_dots_square"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745"
            app:layout_constraintHorizontal_bias="0.96"
            style="?android:attr/borderlessButtonStyle"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>